@@ -385,7 +385,7 @@
 <?php } # REOPEN form END ?>
 <?php # CLOSE form BEGIN ?>
 <?php	if ( access_level_check_greater_or_equal( DEVELOPER ) && ( RESOLVED == $v_status ) ) { ?>
-	<form method="post" action="<?php echo $g_bug_close ?>">
+	<form method="post" action="<?php echo $g_bug_close_page ?>">
 	<input type="hidden" name="f_id" value="<?php echo $f_id ?>">
 	<td class="center">
 		<input type="submit" value="<?php echo $s_close_bug_button ?>">
